--- a/templates/artist/artist.html
+++ b/templates/artist/artist.html
@@ -10,7 +10,7 @@
 <!-- main banner -->
 <div id="main-banner">
   <p><span class="fa fa-check"></span> Verified Artist</p>
-  <h1>MERO</h1>
+  <h1>Eda Baba</h1>
   <h3>2,846,218 monthly listeners</h3>
 </div>
 
@@ -26,32 +26,10 @@
   <div id="popular-song-cell">
       <p id="song-index">1.</p>
       <div id="album-img"></div>
-      <p>Gel Desem De Gelemem</p>
-      <p id="listen-amount">1,422,231</p>
-      <p id="song-lenght">4:43</p>
-      <form>
-        <input type="submit" value="&#9829;"/>
-      </form>
-  </div><!--/cell-->
-
-
-  <div id="popular-song-cell">
-      <p id="song-index">1.</p>
-      <div id="album-img"></div>
-      <p>Gel Desem De Gelemem</p>
-      <p id="listen-amount">1,422,231</p>
-      <p id="song-lenght">4:43</p>
-      <form>
-        <input type="submit" value="&#9829;"/>
-      </form>
-  </div><!--/cell-->
-
-
-  <div id="popular-song-cell">
-      <p id="song-index">1.</p>
-      <div id="album-img"></div>
-      <p>Gel Desem De Gelemem</p>
-      <p id="listen-amount">1,422,231</p>
+      <div id="song-info-box">
+        <p>Gel Desem De Gelemem</p>
+        <p id="listen-amount">1,422,231</p>
+      </div>
       <p id="song-lenght">4:43</p>
       <form>
         <input type="submit" value="&#9829;"/>
@@ -61,20 +39,10 @@
   <div id="popular-song-cell">
       <p id="song-index">1.</p>
       <div id="album-img"></div>
-      <p>Gel Desem De Gelemem</p>
-      <p id="listen-amount">1,422,231</p>
-      <p id="song-lenght">4:43</p>
-      <form>
-        <input type="submit" value="&#9829;"/>
-      </form>
-  </div><!--/cell-->
-
-
-  <div id="popular-song-cell">
-      <p id="song-index">1.</p>
-      <div id="album-img"></div>
-      <p>Gel Desem De Gelemem</p>
-      <p id="listen-amount">1,422,231</p>
+      <div id="song-info-box">
+        <p>Gel Desem De Gelemem</p>
+        <p id="listen-amount">1,422,231</p>
+      </div>
       <p id="song-lenght">4:43</p>
       <form>
         <input type="submit" value="&#9829;"/>
@@ -84,13 +52,16 @@
   <div id="popular-song-cell">
       <p id="song-index">1.</p>
       <div id="album-img"></div>
-      <p>Gel Desem De Gelemem</p>
-      <p id="listen-amount">1,422,231</p>
+      <div id="song-info-box">
+        <p>Gel Desem De Gelemem</p>
+        <p id="listen-amount">1,422,231</p>
+      </div>
       <p id="song-lenght">4:43</p>
       <form>
         <input type="submit" value="&#9829;"/>
       </form>
   </div><!--/cell-->
+
 
 </div>
 
