finished liked songs static and responsive

--- a/templates/playlist/liked_songs.html
+++ b/templates/playlist/liked_songs.html
@@ -10,13 +10,117 @@
 <!-- main top banner -->
 <div id="top-banner">
 
+  <div id="playlist-square">
+      <span class="fa fa-heart"></span>
+  </div>
+
+  <div id="right-side-info-box">
+      <p>PLAYLIST</p>
+      <h1>Liked Songs</h1>
+      <div id="right-side-profile-info">
+          <div id="profile-photo"></div>
+          <a href="">username</a>
+          <p><span class="fa fa-circle"></span> 1200 songs</p>
+      </div>
+  </div>
 </div>
 
-
 <!-- play/stop button -->
+<div id="play-button-div">
+  <button><span class="fa fa-play"></span></button>
+</div>
 
 <!-- song header info part -->
+<div id="song-header-info">
+  <div id="song-header-info-col-1">
+    <p>#</p>
+  </div>
+  <div id="song-header-info-col-2">
+    <p>TITLE</p>
+  </div>
+  <div id="song-header-info-col-3">
+    <p>ALBUM</p>
+  </div>
+  <div id="song-header-info-col-4">
+    <p>DATE ADDED</p>
+  </div>
+  <div id="song-header-info-col-5">
+    <p>LENGTH</p>
+  </div>
+</div>
 
 <!-- song cells list -->
+
+<div id="song-cell-container">
+
+  <div id="song-cell">
+    <div id="song-cell-col-1">
+      <p>1</p>
+    </div>
+    <div id="song-cell-col-2">
+      <div id="song-cell-album-cover"></div>
+      <div id="song-cell-col-2-info">
+        <p id="song-cell-title">Ezbere Biliyorum Seni</p>
+        <p id="song-cell-artist">Eda Baba</p>
+      </div>
+    </div>
+    <div id="song-cell-col-3">
+      <p>Bir Kucuk Tebessum</p>
+    </div>
+    <div id="song-cell-col-4">
+      <p>1, Jun 2020</p>
+    </div>
+    <div id="song-cell-col-5">
+      <p>3:18</p>
+    </div>
+  </div>
+
+
+  <div id="song-cell">
+    <div id="song-cell-col-1">
+      <p>1</p>
+    </div>
+    <div id="song-cell-col-2">
+      <div id="song-cell-album-cover"></div>
+      <div id="song-cell-col-2-info">
+        <p id="song-cell-title">Ezbere Biliyorum Seni</p>
+        <p id="song-cell-artist">Eda Baba</p>
+      </div>
+    </div>
+    <div id="song-cell-col-3">
+      <p>Bir Kucuk Tebessum</p>
+    </div>
+    <div id="song-cell-col-4">
+      <p>1, Jun 2020</p>
+    </div>
+    <div id="song-cell-col-5">
+      <p>3:18</p>
+    </div>
+  </div>
+
+
+  <div id="song-cell">
+    <div id="song-cell-col-1">
+      <p>1</p>
+    </div>
+    <div id="song-cell-col-2">
+      <div id="song-cell-album-cover"></div>
+      <div id="song-cell-col-2-info">
+        <p id="song-cell-title">Ezbere Biliyorum Seni</p>
+        <p id="song-cell-artist">Eda Baba</p>
+      </div>
+    </div>
+    <div id="song-cell-col-3">
+      <p>Bir Kucuk Tebessum</p>
+    </div>
+    <div id="song-cell-col-4">
+      <p>1, Jun 2020</p>
+    </div>
+    <div id="song-cell-col-5">
+      <p>3:18</p>
+    </div>
+  </div>
+
+</div>
 
 {% endblock %}
